# bitinformation

./: README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
bitinformation/: analyser.py  bitinfo_compare.py  bitinfo_stats.py  bitinfo_tool.py  bitinformation.py  icont.py  infcont.py  parameters.py  preprocessor.py  simple_packing.py  statistics.py  table.py  tool.py
data/: clwc_246.grib
figures/: analysis_workflow.d2  analysis_workflow_cams.d2  analysis_workflow_cams_compare.d2  comparison_workflow.d2  comparison_workflow_identity.d2  compile.sh
src/bitinformation/: bitinformation.py  compare.py
tests/: bitinformation_tests.py  test_bitinformation.py  test_config.py  test_julia_output.py  test_parameters.py  test_simple_packing.py  test_statistics.py  test_table.py  test_tool.py
